--- a/GMV/package.json
+++ b/GMV/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.1",
+    "@google-cloud/storage": "^6.9.4",
+    "express": "^4.18.2",
     "google-auth-library": "^8.7.0",
     "googleapis": "^113.0.0",
+    "mongoose": "^7.0.2",
     "nodemailer": "^6.9.1",
+    "openssl": "^2.0.0",
+    "readline": "^1.3.0",
     "xlsx": "^0.18.5"
   }
 }
